# octetos-core

./: .gitignore  AUTHORS  CMakeLists (Copy).txt  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  autogen.sh  builder.iss  config.xml  configure-2.ac  configure-3.ac  configure.ac  core-devel.sln  core-devel.vcxproj  core-devel.vcxproj.filters  core-tdd.vcxproj  core-tdd.vcxproj.filters  core-v3.cbp  core-v3.cpp  core-v3.h  core.cbp  core.code-workspace  core.project  core.sln  core.vcxproj  core.vcxproj.filters  develop-2.sln  developing.sln  library-dll.sln  library-dll.vcxproj  library-dll.vcxproj.filters  linux.cbp  mingw64.cbp  octetos-core-dll.cbp  octetos-core-tests.cpp  octetos-core-tests.sln  (+14 more)
.anjuta/session/: anjuta.session  dock-layout.xml
3/: Buffer.cc  Buffer.hh  C90.hh  CMakeLists.txt  Configuration.cc  Configuration.hh  Exception.cc  Exception.hh  Lexer-C.hh  Lexer-TTA.hh  Lexer-TTB.hh  Lexer-TTC.hh  Lexer.hh  Makefile.am  Semver.hh  array.hh  arrays.hh  ast-math.hh  ast.hh  c90-mesure.sh  develop-lexer-CD.cc  develop-lexer-occ-c90.cc  develop-lexer.cc  entity.cc  entity.hh  flex-c90.sh  lexer.hh  main-occ-c90.cc  math.hh  nodes.cc  nodes.hh  numbers.cc  numbers.hh  occ-c90.sh  octetos-core-3.pc.in  platform.cc  platform.hh  stock.hh  string.cc  string.hh  (+5 more)
TDD-v3/: TDD-v3.sln  TDD-v3.vcxproj  TDD-v3.vcxproj.filters
core-TDD/: core-TDD.sln  core-TDD.vcxproj  core-TDD.vcxproj.filters  packages.config
develop-2/: develop-2.vcxproj  develop-2.vcxproj.filters
developing/: developing.vcxproj  developing.vcxproj.filters
docs/: Doxyfile.in  Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.in  verinfo.cc
ing/: rqs.ods
nodes-develop/: nodes-develop.sln  nodes-develop.vcxproj  nodes-develop.vcxproj.filters
octetos-core/: octetos-core.vcxproj  octetos-core.vcxproj.filters
octetos-core-tests/: octetos-core-tests.cpp  octetos-core-tests.sln  octetos-core-tests.vcxproj
po/: LINGUAS  POTFILES.in  en.po  es.po
src/: Artifact-v2.cc  Artifact-v2.hh  Artifact.cc  Artifact.hh  Buffer-v3.hh  Buffer.cc  Buffer.hh  C90-v0.hh  Develop.java  Error.cc  Error.hh  Exception-v2.cc  Exception-v2.hh  Exception-v3.cc  Exception-v3.hh  Exception.cc  Exception.hh  Licence.cc  Licence.hh  MD5sum.cc  MD5sum.hh  Mail.cc  Mail.hh  Makefile.am  Makefile.in  Memory.hh  Message.cc  Message.hh  Object.cc  Object.hh  Semver.java  Tray.java  Version-parser-v2-old.cc  Version-parser-v2.cc  Version-parser-v3.cc  Version-v2.cc  Version-v2.hh  Version-v3.cc  Version-v3.hh  Version-win-v3.hh  (+83 more)
tests/: CMakeLists.txt  Makefile.am  Makefile.in  ast.c  ast.h  ast_printer.c  ast_printer.h  attempts.cc  develop-Number.cc  develop-nodes-3.cc  develop-nodes.cc  main-vsc.cc  main.cc  nodes-3.cc  nodes-3.hh  nodes-develop.cc  nodes.cc  nodes.hh  performace.cc  statics.csv  tests.hh  util.c  util.h  v0.cc  v1.cc  v2.cc  v2.hh  v3-occ.cc  v3-occ.hh  v3.cc  v3.hh
tests-v3/: tests-v3.vcxproj  tests-v3.vcxproj.filters
tools/: deps-dll.sh
vs/dll/: dll.sln  dll.vcxproj  dll.vcxproj.filters
x64/Release/: core.vcxproj.FileListAbsolute.txt  octetos-core.dll.recipe  octetos-core.iobj  octetos-core.ipdb
x64/Release/octetos-core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  octetos-core.lastbuildstate  octetos-core.write.1u.tlog
