
check_PROGRAMS = v2
TESTS= $(check_PROGRAMS)

LIBS = $(OCTETOS_CORE_BASE_LIBS) $(CUNIT_LIBS) $(top_builddir)/src/liboctetos-core.la
FLAGS = $(OCTETOS_CORE_BASE_FLAGS) $(CUNIT_CFLAGS)  -I$(top_builddir) -I$(top_srcdir)

if OCTETOS_CORE_ENABLE_DEV
FLAGS += -DOCTETOS_CORE_ENABLE_DEV
endif


v2_LDFLAGS =
v2_LDADD = $(LIBS)  
v2_CPPFLAGS = $(FLAGS) -DOCTETOS_CORE_V2 
v2_SOURCES = main.cc v2.cc

v3_LDFLAGS =
v3_LDADD = $(LIBS) 
v3_CPPFLAGS = $(FLAGS) -DOCTETOS_CORE_V3 
v3_SOURCES = main.cc v3.cc

v2_v3_LDFLAGS =
v2_v3_LDADD = $(LIBS) 
v2_v3_CPPFLAGS = $(FLAGS) -DOCTETOS_CORE_V2 -DOCTETOS_CORE_V3 
v2_v3_SOURCES = main.cc v2.cc v3.cc